{
  "version": 4,
  "terraform_version": "1.0.5",
  "serial": 183,
  "lineage": "fd611951-9841-63f6-a430-9bc5f0010db5",
  "resources": [
    {
      "module": "module.setup_backend_servers",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "servers_private_ips",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "address": "10.0.1.0",
            "address_type": "INTERNAL",
            "creation_timestamp": "2021-11-30T08:34:45.901-08:00",
            "id": "projects/chmurki-329715/regions/europe-west3/addresses/private-server-ip-0",
            "name": "private-server-ip-0",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "chmurki-329715",
            "purpose": "GCE_ENDPOINT",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/chmurki-329715/regions/europe-west3/addresses/private-server-ip-0",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/chmurki-329715/regions/europe-west3/subnetworks/servers-subnetwork",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/chmurki-329715/zones/europe-west3-a/instances/server-0"
            ]
          },
          "dependencies": [
            "module.setup_backend_servers.google_compute_network.servers_network",
            "module.setup_backend_servers.google_compute_subnetwork.servers_subnetwork"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "address": "10.0.1.1",
            "address_type": "INTERNAL",
            "creation_timestamp": "2021-11-30T08:34:46.104-08:00",
            "id": "projects/chmurki-329715/regions/europe-west3/addresses/private-server-ip-1",
            "name": "private-server-ip-1",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "chmurki-329715",
            "purpose": "GCE_ENDPOINT",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/chmurki-329715/regions/europe-west3/addresses/private-server-ip-1",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/chmurki-329715/regions/europe-west3/subnetworks/servers-subnetwork",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/chmurki-329715/zones/europe-west3-a/instances/server-1"
            ]
          },
          "dependencies": [
            "module.setup_backend_servers.google_compute_network.servers_network",
            "module.setup_backend_servers.google_compute_subnetwork.servers_subnetwork"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "address": "10.0.1.2",
            "address_type": "INTERNAL",
            "creation_timestamp": "2021-11-30T08:34:45.902-08:00",
            "id": "projects/chmurki-329715/regions/europe-west3/addresses/private-server-ip-2",
            "name": "private-server-ip-2",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "chmurki-329715",
            "purpose": "GCE_ENDPOINT",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/chmurki-329715/regions/europe-west3/addresses/private-server-ip-2",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/chmurki-329715/regions/europe-west3/subnetworks/servers-subnetwork",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/chmurki-329715/zones/europe-west3-a/instances/server-2"
            ]
          },
          "dependencies": [
            "module.setup_backend_servers.google_compute_network.servers_network",
            "module.setup_backend_servers.google_compute_subnetwork.servers_subnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.setup_backend_servers",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "servers_firewall",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-11-30T06:58:05.703-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/chmurki-329715/global/firewalls/servers-firewall",
            "log_config": [],
            "name": "servers-firewall",
            "network": "https://www.googleapis.com/compute/v1/projects/chmurki-329715/global/networks/servers-network-new",
            "priority": 1000,
            "project": "chmurki-329715",
            "self_link": "https://www.googleapis.com/compute/v1/projects/chmurki-329715/global/firewalls/servers-firewall",
            "source_ranges": [
              "156.17.151.30",
              "79.110.199.238"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.setup_backend_servers.google_compute_network.servers_network"
          ]
        }
      ]
    },
    {
      "module": "module.setup_backend_servers",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "servers_firewall_2",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-11-30T07:47:23.014-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/chmurki-329715/global/firewalls/servers-firewall-2",
            "log_config": [],
            "name": "servers-firewall-2",
            "network": "https://www.googleapis.com/compute/v1/projects/chmurki-329715/global/networks/servers-network-new",
            "priority": 1000,
            "project": "chmurki-329715",
            "self_link": "https://www.googleapis.com/compute/v1/projects/chmurki-329715/global/firewalls/servers-firewall-2",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.setup_backend_servers.google_compute_network.servers_network"
          ]
        }
      ]
    },
    {
      "module": "module.setup_backend_servers",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "backend_servers",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20211105",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/chmurki-329715/zones/europe-west3-a/disks/server-0"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/chmurki-329715/zones/europe-west3-a/instances/server-0",
            "instance_id": "9104882722816126223",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "enIURuTUz6o=",
            "metadata_startup_script": "#! /bin/bash\nsudo apt update\nwait 60\nsudo apt install apache2 -y\nwait 60\nsudo systemctl start apache2\nwait 60\nsudo systemctl status apache2",
            "name": "server-0",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/chmurki-329715/global/networks/servers-network-new",
                "network_ip": "10.0.1.0",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/chmurki-329715/regions/europe-west3/subnetworks/servers-subnetwork",
                "subnetwork_project": "chmurki-329715"
              }
            ],
            "project": "chmurki-329715",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/chmurki-329715/zones/europe-west3-a/instances/server-0",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server",
              "https-server"
            ],
            "tags_fingerprint": "6smc4R4d39I=",
            "zone": "europe-west3-a"
          },
          "dependencies": [
            "module.setup_backend_servers.google_compute_address.servers_private_ips",
            "module.setup_backend_servers.google_compute_network.servers_network",
            "module.setup_backend_servers.google_compute_subnetwork.servers_subnetwork"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20211105",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/chmurki-329715/zones/europe-west3-a/disks/server-1"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/chmurki-329715/zones/europe-west3-a/instances/server-1",
            "instance_id": "6240395563679608078",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "enIURuTUz6o=",
            "metadata_startup_script": "#! /bin/bash\nsudo apt update\nwait 60\nsudo apt install apache2 -y\nwait 60\nsudo systemctl start apache2\nwait 60\nsudo systemctl status apache2",
            "name": "server-1",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/chmurki-329715/global/networks/servers-network-new",
                "network_ip": "10.0.1.1",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/chmurki-329715/regions/europe-west3/subnetworks/servers-subnetwork",
                "subnetwork_project": "chmurki-329715"
              }
            ],
            "project": "chmurki-329715",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/chmurki-329715/zones/europe-west3-a/instances/server-1",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server",
              "https-server"
            ],
            "tags_fingerprint": "6smc4R4d39I=",
            "zone": "europe-west3-a"
          },
          "dependencies": [
            "module.setup_backend_servers.google_compute_subnetwork.servers_subnetwork",
            "module.setup_backend_servers.google_compute_address.servers_private_ips",
            "module.setup_backend_servers.google_compute_network.servers_network"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20211105",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/chmurki-329715/zones/europe-west3-a/disks/server-2"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/chmurki-329715/zones/europe-west3-a/instances/server-2",
            "instance_id": "7297153304579796238",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "enIURuTUz6o=",
            "metadata_startup_script": "#! /bin/bash\nsudo apt update\nwait 60\nsudo apt install apache2 -y\nwait 60\nsudo systemctl start apache2\nwait 60\nsudo systemctl status apache2",
            "name": "server-2",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/chmurki-329715/global/networks/servers-network-new",
                "network_ip": "10.0.1.2",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/chmurki-329715/regions/europe-west3/subnetworks/servers-subnetwork",
                "subnetwork_project": "chmurki-329715"
              }
            ],
            "project": "chmurki-329715",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/chmurki-329715/zones/europe-west3-a/instances/server-2",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags": [
              "http-server",
              "https-server"
            ],
            "tags_fingerprint": "6smc4R4d39I=",
            "zone": "europe-west3-a"
          },
          "dependencies": [
            "module.setup_backend_servers.google_compute_network.servers_network",
            "module.setup_backend_servers.google_compute_subnetwork.servers_subnetwork",
            "module.setup_backend_servers.google_compute_address.servers_private_ips"
          ]
        }
      ]
    },
    {
      "module": "module.setup_backend_servers",
      "mode": "managed",
      "type": "google_compute_network",
      "name": "servers_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "id": "projects/chmurki-329715/global/networks/servers-network-new",
            "mtu": 0,
            "name": "servers-network-new",
            "project": "chmurki-329715",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/chmurki-329715/global/networks/servers-network-new"
          }
        }
      ]
    },
    {
      "module": "module.setup_backend_servers",
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "servers_subnetwork",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2021-11-30T06:30:16.598-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/chmurki-329715/regions/europe-west3/subnetworks/servers-subnetwork",
            "ip_cidr_range": "10.0.0.0/16",
            "name": "servers-subnetwork",
            "network": "https://www.googleapis.com/compute/v1/projects/chmurki-329715/global/networks/servers-network-new",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "chmurki-329715",
            "purpose": "PRIVATE",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/chmurki-329715/regions/europe-west3/subnetworks/servers-subnetwork",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "module.setup_backend_servers.google_compute_network.servers_network"
          ]
        }
      ]
    },
    {
      "module": "module.setup_load_balancer",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "load_balancer_private_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "10.0.1.255",
            "address_type": "INTERNAL",
            "creation_timestamp": "2021-11-30T08:34:46.112-08:00",
            "id": "projects/chmurki-329715/regions/europe-west3/addresses/load-balancer-private-ip",
            "name": "load-balancer-private-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "chmurki-329715",
            "purpose": "GCE_ENDPOINT",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/chmurki-329715/regions/europe-west3/addresses/load-balancer-private-ip",
            "subnetwork": "https://www.googleapis.com/compute/v1/projects/chmurki-329715/regions/europe-west3/subnetworks/servers-subnetwork",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/chmurki-329715/zones/europe-west3-a/instances/load-balancer"
            ]
          },
          "dependencies": [
            "module.setup_backend_servers.google_compute_network.servers_network",
            "module.setup_backend_servers.google_compute_subnetwork.servers_subnetwork"
          ]
        }
      ]
    },
    {
      "module": "module.setup_load_balancer",
      "mode": "managed",
      "type": "google_compute_address",
      "name": "load_balancer_public_ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.159.75.206",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2021-11-30T06:24:35.979-08:00",
            "id": "projects/chmurki-329715/regions/europe-west3/addresses/load-balancer-public-ip",
            "name": "load-balancer-public-ip",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "chmurki-329715",
            "region": "europe-west3",
            "self_link": "https://www.googleapis.com/compute/v1/projects/chmurki-329715/regions/europe-west3/addresses/load-balancer-public-ip",
            "users": [
              "https://www.googleapis.com/compute/v1/projects/chmurki-329715/zones/europe-west3-a/instances/load-balancer"
            ]
          }
        }
      ]
    },
    {
      "module": "module.setup_load_balancer",
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "firewall_ssh_load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2021-11-30T06:39:17.162-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/chmurki-329715/global/firewalls/firewall-ssh-load-balancer",
            "log_config": [],
            "name": "firewall-ssh-load-balancer",
            "network": "https://www.googleapis.com/compute/v1/projects/chmurki-329715/global/networks/servers-network-new",
            "priority": 1000,
            "project": "chmurki-329715",
            "self_link": "https://www.googleapis.com/compute/v1/projects/chmurki-329715/global/firewalls/firewall-ssh-load-balancer",
            "source_ranges": [
              "156.17.151.30",
              "79.110.199.238"
            ],
            "source_service_accounts": [],
            "source_tags": [],
            "target_service_accounts": [],
            "target_tags": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.setup_backend_servers.google_compute_network.servers_network"
          ]
        }
      ]
    },
    {
      "module": "module.setup_load_balancer",
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "load_balancer",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20211105",
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/chmurki-329715/zones/europe-west3-a/disks/load-balancer"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/chmurki-329715/zones/europe-west3-a/instances/load-balancer",
            "instance_id": "7972978073736571996",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "f1-micro",
            "metadata_fingerprint": "kKLTxWmh2hI=",
            "name": "load-balancer",
            "network_interface": [
              {
                "access_config": [
                  {
                    "nat_ip": "34.159.75.206",
                    "network_tier": "PREMIUM"
                  }
                ],
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/chmurki-329715/global/networks/servers-network-new",
                "network_ip": "10.0.1.255",
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/chmurki-329715/regions/europe-west3/subnetworks/servers-subnetwork",
                "subnetwork_project": "chmurki-329715"
              }
            ],
            "project": "chmurki-329715",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/chmurki-329715/zones/europe-west3-a/instances/load-balancer",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "europe-west3-a"
          },
          "dependencies": [
            "module.setup_backend_servers.google_compute_network.servers_network",
            "module.setup_backend_servers.google_compute_subnetwork.servers_subnetwork",
            "module.setup_load_balancer.google_compute_address.load_balancer_private_ip",
            "module.setup_load_balancer.google_compute_address.load_balancer_public_ip"
          ]
        }
      ]
    }
  ]
}